Fix layout issues in hamburger menu

--- a/assets/built/output.css
+++ b/assets/built/output.css
@@ -2939,6 +2939,10 @@ form.success .hide_success {
     position: static;
   }
 
+  .md\:order-last {
+    order: 9999;
+  }
+
   .md\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
